fix mobile gap

--- a/src/components/ThemePreview/ThemePreview.module.css
+++ b/src/components/ThemePreview/ThemePreview.module.css
@@ -78,6 +78,7 @@
 .toggles {
   display: flex;
   overflow: auto;
+  margin: 10px 0 0;
 }
 
 .select {
